layinh out HTML and beginning CSS

--- a/index.html
+++ b/index.html
@@ -3,9 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/index.css">
+    <title>Module 4 Project Option 2</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <h1>William Paris</h1>
+            <div class="links">
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">Contact</a>
+                <a href="">Monsters</a>
+            </div>
+        </nav>
+        
+    </header>
+    <section class="top">
+        <div>
+            <div class="largeText">
+                <h2>Monster Hunter Rise</h2>
+                <button>Monsters</button>
+            </div>
+            <!-- <div class="Monsters">
+                <button>Monsters</button> -->
+            </div>
+            <div class="large">
+                <img src="img/welcome.jpg" alt="player jumping with joy">
+            </div>
+        </div>
+    </section>
+    <section class="first">
+        <div>
+            <img src="" alt="monster">
+            <h3></h3>
+            <img src="" alt="monster">
+            <h3></h3>
+            <img src="" alt="monster">
+            <h3></h3>
+        </div>
+    </section>
+    <section class="second">
+        <div>
+            <img src="" alt="monster">
+            <h3></h3>
+            <img src="" alt="monster">
+            <h3></h3>
+            <img src="" alt="monster">
+            <h3></h3>
+        </div>
+    </section>
+    <footer>
+        <nav class="navFooter">
+            <a href="">Contact Me</a>
+        </nav>
+    </footer>
+
     
 </body>
 </html>
