working on mid section

--- a/index.html
+++ b/index.html
@@ -28,32 +28,49 @@
                 <h2>Monster Hunter Rise</h2>
                 <button>Monsters</button>
             </div>
-            <!-- <div class="Monsters">
-                <button>Monsters</button> -->
-            </div>
+        </div>
             <div class="large">
                 <img src="img/welcome.jpg" alt="player jumping with joy">
             </div>
         </div>
     </section>
     <section class="first">
-        <div>
-            <img src="" alt="monster">
-            <h3></h3>
-            <img src="" alt="monster">
-            <h3></h3>
-            <img src="" alt="monster">
-            <h3></h3>
+            <div class="topThree">
+            <img src="img/aknosomPose.jpg" alt="monster">
+            </div>
+            <div class="topThree">
+            <img src="img/arzurosRoar.jpg" alt="monster">
+            </div>
+            <div class="topThree">
+            <img src="img/bariothCrouch.jpg" alt="monster">
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="wordsTop">
+            <h3>Aknosom</h3>
+            <h3>Arzuros</h3>
+            <h3>Barioth</h3>
         </div>
     </section>
     <section class="second">
-        <div>
-            <img src="" alt="monster">
-            <h3></h3>
-            <img src="" alt="monster">
-            <h3></h3>
-            <img src="" alt="monster">
-            <h3></h3>
+        <div class="bottomThree">
+            <img src="img/magnamaloAngry.jpg" alt="monster">
+            </div>
+            <div class="bottomThree">
+            <img src="img/rathalosStare.jpg" alt="monster">
+            </div>
+            <div class="bottomThree">
+            <img src="img/tobiKadachiLunge.jpg" alt="monster">
+            </div>
+        </div>
+        
+    </section>
+    <section>
+        <div class="wordsBottom">
+            <h3>Aknosom</h3>
+            <h3>Arzuros</h3>
+            <h3>Barioth</h3>
         </div>
     </section>
     <footer>
