--- a/about.html
+++ b/about.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1> ABOUT </h1>
+    <p>This is a website for the Nintendo Switch Video Game Monster Hunter Rise. It is one of my favorite games so i ahve decided to complete this project with it as the subject.</p>
 </body>
 </html>
