--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="navHeader">
             <h1>William Paris</h1>
             <div class="links">
                 <a href="">Home</a>
-                <a href="">About</a>
-                <a href="">Contact</a>
-                <a href="">Monsters</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
+                <a href="projects.html">Monsters</a>
             </div>
         </nav>
         
@@ -75,7 +75,7 @@
     </section>
     <footer>
         <nav class="navFooter">
-            <a href="">Contact Me</a>
+            <a target="_blank" href="https://twitter.com/monsterhunter?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">Twitter</a>
         </nav>
     </footer>
 
