finished 800px and working on 500px and rewrote some old code

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         </nav>
         
     </header>
-    <section class="top">
+    <section class="content"> 
+    <div class="top">
         <div>
             <div class="largeText">
                 <h2>Monster Hunter Rise</h2>
@@ -33,46 +34,47 @@
                 <img src="img/welcome.jpg" alt="player jumping with joy">
             </div>
         </div>
-    </section>
-    <section class="first">
-            <div class="topThree">
+    </div>
+    <div class="first">
+            <div class="topThree topTwo">
             <img src="img/aknosomPose.jpg" alt="monster">
             </div>
-            <div class="topThree">
+            <div class="topThree topTwo">
             <img src="img/arzurosRoar.jpg" alt="monster">
             </div>
-            <div class="topThree">
+            <div class="topThree midTwo">
             <img src="img/bariothCrouch.jpg" alt="monster">
             </div>
         </div>
-    </section>
-    <section>
+    </div>
+    <div>
         <div class="wordsTop">
             <h3>Aknosom</h3>
             <h3>Arzuros</h3>
             <h3>Barioth</h3>
         </div>
-    </section>
-    <section class="second">
-        <div class="bottomThree">
-            <img src="img/magnamaloAngry.jpg" alt="monster">
+    </div>
+    <div class="second">
+        <div class="bottomThree midTwo">
+            <img class="mad" src="img/magnamaloAngry.jpg" alt="monster">
             </div>
-            <div class="bottomThree">
+            <div class="bottomThree bottomTwo">
             <img src="img/rathalosStare.jpg" alt="monster">
             </div>
-            <div class="bottomThree">
+            <div class="bottomThree bottomTwo">
             <img src="img/tobiKadachiLunge.jpg" alt="monster">
             </div>
         </div>
         
-    </section>
-    <section>
+    </div>
+    <div>
         <div class="wordsBottom">
-            <h3>Aknosom</h3>
-            <h3>Arzuros</h3>
-            <h3>Barioth</h3>
+            <h3>Magnamalo</h3>
+            <h3>Rathalos</h3>
+            <h3>Tobi-Kadachi</h3>
         </div>
-    </section>
+    </div>
+</section>
     <footer>
         <nav class="navFooter">
             <a target="_blank" href="https://twitter.com/monsterhunter?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">Twitter</a>
