finished 500px media

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     </div>
     <div>
         <div class="wordsTop">
-            <h3>Aknosom</h3>
-            <h3>Arzuros</h3>
-            <h3>Barioth</h3>
+            <h3 class="aknosom">Aknosom</h3>
+            <h3 class="arzuros">Arzuros</h3>
+            <h3 class="barioth">Barioth</h3>
         </div>
     </div>
     <div class="second">
@@ -69,9 +69,9 @@
     </div>
     <div>
         <div class="wordsBottom">
-            <h3>Magnamalo</h3>
-            <h3>Rathalos</h3>
-            <h3>Tobi-Kadachi</h3>
+            <h3 class="magnamalo">Magnamalo</h3>
+            <h3 class="rathalos">Rathalos</h3>
+            <h3 class="tobi">Tobi-Kadachi</h3>
         </div>
     </div>
 </section>
