added accessability and renamed some tags final

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
     </div>
     <div class="first">
             <div class="topThree topTwo">
-            <img src="img/aknosomPose.jpg" alt="monster">
+            <img src="img/aknosomPose.jpg" alt="Aknosom posing">
             </div>
             <div class="topThree topTwo">
-            <img src="img/arzurosRoar.jpg" alt="monster">
+            <img src="img/arzurosRoar.jpg" alt="An Arzuros Roaring">
             </div>
             <div class="topThree midTwo">
-            <img src="img/bariothCrouch.jpg" alt="monster">
+            <img src="img/bariothCrouch.jpg" alt="A crouching Barioth">
             </div>
         </div>
     </div>
@@ -56,13 +56,13 @@
     </div>
     <div class="second">
         <div class="bottomThree midTwo">
-            <img class="mad" src="img/magnamaloAngry.jpg" alt="monster">
+            <img class="mad" src="img/magnamaloAngry.jpg" alt="An angry Magnamalo">
             </div>
             <div class="bottomThree bottomTwo">
-            <img src="img/rathalosStare.jpg" alt="monster">
+            <img src="img/rathalosStare.jpg" alt="Rathalos staring">
             </div>
             <div class="bottomThree bottomTwo">
-            <img src="img/tobiKadachiLunge.jpg" alt="monster">
+            <img src="img/tobiKadachiLunge.jpg" alt="Tob-Kadachi lunging">
             </div>
         </div>
         
